Changed audio header

--- a/samples/html/audio.html
+++ b/samples/html/audio.html
@@ -11,11 +11,11 @@
 	</header>
 	<section>
 		<audio id="audio-1" controls="controls">
-			<source src="audios/dead.ogg" type="audio/ogg"/>
+			<source src="audios/stage_clear.ogg" type="audio/ogg"/>
 		</audio>
 		<audio id="audio-2" autoplay="autoplay" controls="controls" loop="loop" muted="muted">
-			<source src="audios/dead.mp3" type="audio/mpeg"/>
-			<source src="audios/dead.ogg" type="audio/ogg"/>
+			<source src="audios/stage_clear.mp3" type="audio/mpeg"/>
+			<source src="audios/stage_clear.ogg" type="audio/ogg"/>
 		</audio>
 	</section>
 	<footer>
