Changed button samples

--- a/samples/html/button.html
+++ b/samples/html/button.html
@@ -10,10 +10,10 @@
 		<h2>HTML5 samples: button</h2>
 	</header>
 	<section>
-		<input type="button" value="Normal button" autofocus="autofocus" id="btn"/>
-		<input type="reset" value="Reset all" disabled="disabled" id="rst"/>
-		<input type="submit" value="Send Form" autofocus="autofocus" id="sbmt" formaction="there.php"/>
-		<button id="other">This is just another button</button>
+		<input type="button" value="Generic Button" autofocus="autofocus" id="btn"/>
+		<input type="reset" value="Reset Button" disabled="disabled" id="rst"/>
+		<input type="submit" value="Send Form Button" autofocus="autofocus" id="sbmt" formaction="there.php"/>
+		<button id="other">Another Button</button>
 	</section>
 	<br />
 	<footer>
