--- a/samples/html/canvas.html
+++ b/samples/html/canvas.html
@@ -23,6 +23,10 @@
        ctx.fillRect(10, 10, 100, 100);
        // outlined rectangle,
        ctx.strokeRect(150, 10, 100, 100);
+			 // Circle
+				ctx.arc(100, 75, 50, 0, 2 * Math.PI);
+				 // outlined rectangle,
+				ctx.stroke();
 		</script>
 	</section>
 	<footer>
