Changed datalist samples

--- a/samples/html/datalist.html
+++ b/samples/html/datalist.html
@@ -10,11 +10,11 @@
 		<h2>HTML5 samples: datalist</h2>
 	</header>
 	<section>
-		<input list="languageList" id="languages"/>
-		<datalist id="languageList">
-			<option value="1">JavaScript</option>
-			<option value="2">TypeScript</option>
-			<option value="3">CoffeeScript</option>
+		<input list="companyList" id="companies"/>
+		<datalist id="companyList">
+			<option value="1">Microsoft</option>
+			<option value="2">Apple</option>
+			<option value="3">Tesla</option>
 		</datalist>
 	</section>
 	<br />
