--- a/samples/html/form.html
+++ b/samples/html/form.html
@@ -10,11 +10,12 @@
 		<h2>HTML5 samples: form</h2>
 	</header>
 	<section>
-		<form name="sampleform" id="form-1" action="form.php" method="post">
+		<form name="sampleform" id="form-1" action="form.html" method="post">
 			<fieldset>
-			<legend>This is a form</legend>
-				<input type="text" name="username" value="">
-				<input type="submit" name="submit" value="Send">
+			<legend>Sample form</legend>
+				<input type="text" name="login" value="">
+				<input type="password" name="password" value="">
+				<input type="submit" name="submit" value="Send Form">
 			</fieldset>
 		</form>
 	</section>
