--- a/samples/html/image.html
+++ b/samples/html/image.html
@@ -10,8 +10,9 @@
 		<h2>HTML5 samples: image</h2>
 	</header>
 	<section>
-	<!-- Origin could be anonymous or use credentials -->
-		<img id="image-1" alt="Sample image" title="Sample image" src="img/html5.png" crossorigin="anonymous"/>
+		<img id="logo1" alt="HTML5" src="img/html5.png" />
+		<!-- Origin could be anonymous or use credentials -->
+		<img id="logo2" alt="Ruby logo image" title="Ruby logo image" src="img/ruby.png" crossorigin="anonymous"/>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
