--- a/samples/html/form.html
+++ b/samples/html/form.html
@@ -13,8 +13,7 @@
 		<form name="sampleform" id="form-1" action="form.html" method="post">
 			<fieldset>
 			<legend>Sample form</legend>
-				<input type="text" name="login" value="">
-				<input type="password" name="password" value="">
+				<input type="text" name="searchTerm" value="">
 				<input type="submit" name="submit" value="Send Form">
 			</fieldset>
 		</form>
