--- a/samples/html/input.html
+++ b/samples/html/input.html
@@ -12,6 +12,8 @@
 	<section>
 		<label for="login">Login</label>
 		<input id="login" name="login" placeholder="Type your login name" type="text"/>
+		<label for="password">Password</label>
+		<input id="password" name="password" placeholder="Password here" type="password"/>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
