--- a/samples/html/forms/color.html
+++ b/samples/html/forms/color.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>HTML5 form samples: color type</title>
 </head>
 <body>
