--- a/samples/html/label.html
+++ b/samples/html/label.html
@@ -14,14 +14,14 @@
 			<fieldset>
 			<legend>This is a form</legend>
 				<div>
-					<label id="labelUsername" for="username">Username</label>
-					<input type="text" name="username" id="username" value="">
+					<label id="labelLogin" for="login">Login</label>
+					<input type="text" name="login" id="login" value="">
 				</div>
 				<div>
-					<label id="labelRemember" for="remember">Remember me</label>
-					<input type="checkbox" name="remember" id="remember" value="">
+					<label id="labelDontAsk" for="dontask">Don't ask again</label>
+					<input type="checkbox" name="dontaskAgain" id="dontask" value="">
 				</div>
-				<input type="submit" name="submit" value="Send">
+				<input type="submit" name="submit" value="Save">
 			</fieldset>
 		</form>
 	</section>
