--- a/samples/html/form.html
+++ b/samples/html/form.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta key="author" content="Pello Xabier Altadill Izura">
 <title>HTML5 samples: form</title>
 </head>
 <body>
