--- a/samples/html/forms/search.html
+++ b/samples/html/forms/search.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta key="author" content="Pello Xabier Altadill Izura">
 <title>HTML5 form samples: search type</title>
 </head>
 <body>
