--- a/samples/html/menu.html
+++ b/samples/html/menu.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta key="author" content="Pello Xabier Altadill Izura">
 <title>HTML5 samples: menu</title>
 </head>
 <body contextmenu="menu-1">
