--- a/samples/html/list.html
+++ b/samples/html/list.html
@@ -10,18 +10,18 @@
 		<h2>HTML5 samples: list</h2>
 	</header>
 	<section>
-		<h3>Ordered list: best languages</h3>
-		<ol>
-			<li>JavaScript</li>
-			<li>C++</li>
-			<li>php</li>
-		</ol>
-		<h3>Unordered list: some databases</h3>
+		<h3>Unordered list: Systems</h3>
 		<ul>
-			<li>MySQL</li>
-			<li>Mongodb</li>
-			<li>Oracle</li>
+			<li>Windows</li>
+			<li>Linux</li>
+			<li>MacOS</li>
 		</ul>
+		<h3>Ordered list: book contents</h3>
+		<ol>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JS</li>
+		</ol>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
