--- a/samples/html/a.html
+++ b/samples/html/a.html
@@ -10,14 +10,13 @@
 		<h1>HTML5 samples: anchor</h1>
 	</header>
 	<section>
-		<p>This is a <a href="http://www.google.com">link to Google</a>.</p>
-		<p>Go to <a href="http://www.w3c.org" target="_blank">the W3c</a>.</p>
-		<p>Website of <a href="http://www.cuatrovientos.org" title="Cuatrovientos site"> Cuatrovientos</a>.</p>
-
+		<p>This is a <a href="http://www.youtube.com">YouTube</a>.</p>
+		<p>Open a repo on <a href="http://www.github.com" title="GitHub site">GitHub</a>.</p>
+		<p>Visit <a href="http://www.w3c.org" target="_blank">the W3c</a>.</p>
 	</section>
 	<br />
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
