menu sample changed

--- a/samples/html/menu.html
+++ b/samples/html/menu.html
@@ -5,15 +5,15 @@
 <meta key="author" content="Pello Xabier Altadill Izura">
 <title>HTML5 samples: menu</title>
 </head>
-<body contextmenu="menu-1">
+<body contextmenu="myMenu">
 	<header>
-		<h2>HTML5 samples: menu</h2>
+		<h2>HTML5 samples: context menu</h2>
 	</header>
 	<section>
-		<menu id="menu-1" label="My menu" type="context">
-			<menuitem type="command" label="Item 0">Option1</menuitem>
-			<menuitem type="command" label="Item 1">Option2</menuitem>
-			<menuitem type="command" label="Item 2">Option3</menuitem>
+		<menu id="myMenu" label="My menu" type="context">
+			<menuitem type="command" label="Copy">Copy</menuitem>
+			<menuitem type="command" label="Cut">Cut</menuitem>
+			<menuitem type="command" label="Paste">Paste</menuitem>
 		</menu>
 	</section>
 	<footer>
