Changed footer header

--- a/samples/html/button.html
+++ b/samples/html/button.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: button</h1>
+		<h2>HTML5 samples: button</h2>
 	</header>
 	<section>
 		<input type="button" value="Normal button" autofocus="autofocus" id="btn"/>
@@ -17,7 +17,7 @@
 	</section>
 	<br />
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
