--- a/samples/html/audio.html
+++ b/samples/html/audio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: audio</h1>
+		<h2>HTML5 samples: audio</h2>
 	</header>
 	<section>
 		<audio id="audio-1" controls="controls">
@@ -19,7 +19,7 @@
 		</audio>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
