--- a/samples/html/canvas.html
+++ b/samples/html/canvas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: canvas</h1>
+		<h2>HTML5 samples: canvas</h2>
 	</header>
 	<section>
 		<canvas id="canvas-1" width="300" height="200"></canvas>
@@ -26,7 +26,7 @@
 		</script>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
