--- a/samples/html/datalist.html
+++ b/samples/html/datalist.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: datalist</h1>
+		<h2>HTML5 samples: datalist</h2>
 	</header>
 	<section>
 		<input list="languageList" id="languages"/>
@@ -19,7 +19,7 @@
 	</section>
 	<br />
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
