--- a/samples/html/form.html
+++ b/samples/html/form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: form</h1>
+		<h2>HTML5 samples: form</h2>
 	</header>
 	<section>
 		<form name="sampleform" id="form-1" action="form.php" method="post">
@@ -19,7 +19,7 @@
 		</form>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
