--- a/samples/html/forms/date.html
+++ b/samples/html/forms/date.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 form samples: date type</h1>
+		<h2>HTML5 form samples: date type</h2>
 	</header>
 	<section>
 		<form>
@@ -21,7 +21,7 @@
 		</form>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
