--- a/samples/html/forms/file.html
+++ b/samples/html/forms/file.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 form samples: file type</h1>
+		<h2>HTML5 form samples: file type</h2>
 	</header>
 	<section>
 		<form enctype="application/x-www-form-urlencoded">
@@ -19,7 +19,7 @@
 		</form>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
