--- a/samples/html/forms/range.html
+++ b/samples/html/forms/range.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 form samples: range type</h1>
+		<h2>HTML5 form samples: range type</h2>
 	</header>
 	<section>
 		<form>
@@ -20,7 +20,7 @@
 	</section>
 		<br />
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
