--- a/samples/html/image.html
+++ b/samples/html/image.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: image</h1>
+		<h2>HTML5 samples: image</h2>
 	</header>
 	<section>
 	<!-- Origin could be anonymous or use credentials -->
 		<img id="image-1" alt="Sample image" title="Sample image" src="img/html5.png" crossorigin="anonymous"/>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
