--- a/samples/html/input.html
+++ b/samples/html/input.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: input</h1>
+		<h2>HTML5 samples: input</h2>
 	</header>
 	<section>
 		<label for="login">Login</label>
 		<input id="login" name="login" placeholder="Type your login name" type="text"/>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
