--- a/samples/html/list.html
+++ b/samples/html/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: list</h1>
+		<h2>HTML5 samples: list</h2>
 	</header>
 	<section>
 		<h3>Ordered list: best languages</h3>
@@ -24,7 +24,7 @@
 		</ul>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
