--- a/samples/html/menu.html
+++ b/samples/html/menu.html
@@ -7,7 +7,7 @@
 </head>
 <body contextmenu="menu-1">
 	<header>
-		<h1>HTML5 samples: menu</h1>
+		<h2>HTML5 samples: menu</h2>
 	</header>
 	<section>
 		<menu id="menu-1" label="My menu" type="context">
@@ -17,7 +17,7 @@
 		</menu>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
