--- a/samples/html/meter.html
+++ b/samples/html/meter.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: meter</h1>
+		<h2>HTML5 samples: meter</h2>
 	</header>
 	<section>
 		<meter value="5" min="0" max="10" low="1" high="9" optimum="5" id="myMeter">
@@ -16,7 +16,7 @@
 	</section>
 	<br />
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
