--- a/samples/html/paragraph.html
+++ b/samples/html/paragraph.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: paragraph</h1>
+		<h2>HTML5 samples: paragraph</h2>
 	</header>
 	<section>
 		<p>Esto es un párrafo, contiene un texto largo</p>
@@ -15,7 +15,7 @@
 		<p>Este sería el párrafo final</p>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
