--- a/samples/html/table.html
+++ b/samples/html/table.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: table</h1>
+		<h2>HTML5 samples: table</h2>
 	</header>
 	<section>
 		<table id="sample">
@@ -39,7 +39,7 @@
 		</table>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
