--- a/samples/html/video.html
+++ b/samples/html/video.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>HTML5 samples: video</h1>
+		<h2>HTML5 samples: video</h2>
 	</header>
 	<section>
 		<video id="myVideo" width="300" height="200" autoplay="autoplay" 
@@ -18,7 +18,7 @@
 		</video>
 	</section>
 	<footer>
-		<a href="index.html" title="Back to index">Home</a>
+		<a href="index.html" title="Go back to index">Index</a>
 	</footer>
 </body>
 </html>
