meter sample changed

--- a/samples/html/meter.html
+++ b/samples/html/meter.html
@@ -10,8 +10,8 @@
 		<h2>HTML5 samples: meter</h2>
 	</header>
 	<section>
-		<meter value="5" min="0" max="10" low="1" high="9" optimum="5" id="myMeter">
-		This is a meter from 0 to 10
+		<meter value="50" min="0" max="100" low="1" high="99" optimum="50" id="myMeter">
+		Meter from 0 to 100
 		</meter>
 	</section>
 	<br />
