--- a/samples/html/paragraph.html
+++ b/samples/html/paragraph.html
@@ -10,9 +10,9 @@
 		<h2>HTML5 samples: paragraph</h2>
 	</header>
 	<section>
-		<p>Esto es un párrafo, contiene un texto largo</p>
-		<p>Cada párrafo genera un salto de línea respecto al final además de cierto margen.</p>
-		<p>Este sería el párrafo final</p>
+		<p>This is just a paragraph, contains a text.</p>
+		<p>Each HTML paragraph adds a newline with the next element and also some padding.</p>
+		<p>This is the last paragraph.</p>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
