--- a/samples/html/table.html
+++ b/samples/html/table.html
@@ -11,29 +11,34 @@
 	</header>
 	<section>
 		<table id="sample">
-			<caption>Sample table</caption>
+			<caption>Contents table</caption>
 			<thead>
 				<tr>
 					<th>Id</th>
-					<th>Name</th>
-					<th>Description</th>
+					<th>Language</th>
+					<th>Definition</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>1</td>
 					<td>HTML</td>
-					<td>Language of the web documents</td>
+					<td>HyperText Markup Language</td>
 				</tr>
 				<tr>
 					<td>2</td>
-					<td>JavaScript</td>
-					<td>Language of web and mobiles</td>
+					<td>CSS</td>
+					<td>Cascading Stylesheet language</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>JS</td>
+					<td>JavaScript programming language</td>
 				</tr>
 			</tbody>
 			<tfoot>
 				<tr colspan="3">
-					<th>2 items</th>
+					<th>3 items</th>
 				</tr>
 			</tfoot>
 		</table>
