--- a/samples/html/text.html
+++ b/samples/html/text.html
@@ -11,9 +11,12 @@
 	</header>
 	<section>
 		<div>
-			<label for="text1">Text type:</label> <input id="text1" name="Text"
-				placeholder="Text" type="text" />
+			<label for="myText">Text input type:</label>
+			<input id="myText" name="text" placeholder="Some text" type="text" />
 		</div>
 	</section>
+	<footer>
+		<a href="index.html" title="Go back to index">Index</a>
+	</footer>
 </body>
 </html>
