Added pre sample

--- a/samples/html/paragraph.html
+++ b/samples/html/paragraph.html
@@ -3,16 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: paragraph</title>
+<title>HTML5 samples: preformated text</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: paragraph</h2>
+		<h2>HTML5 samples: preformated text</h2>
 	</header>
 	<section>
-		<p>This is just a paragraph, contains a text.</p>
-		<p>Each HTML paragraph adds a newline with the next element and also some padding.</p>
-		<p>This is the last paragraph.</p>
+		<p>Do not go gentle</p>
+		<pre>
+			Do not go gentle into that good night,
+			Old age should burn and rave at close of day;
+			Rage, rage against the dying of the light.
+
+			Though wise men at their end know dark is right,
+			Because their words had forked no lightning they
+			Do not go gentle into that good night.
+			...
+		</pre>
+		<p>Dylan Thomas</p>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
