--- a/samples/html/video.html
+++ b/samples/html/video.html
@@ -10,11 +10,11 @@
 		<h2>HTML5 samples: video</h2>
 	</header>
 	<section>
-		<video id="myVideo" width="300" height="200" autoplay="autoplay" 
+		<video id="sampleVideo" width="300" height="200" autoplay="autoplay"
 				controls="controls" loop="loop" muted="muted">
-			<source src="videos/howrude.mp4" type="video/mp4"/>
-			<source src="videos/howrude.ogg" type="video/ogg"/>
-			<source src="videos/howrude.webm" type="video/webbm"/>
+			<source src="videos/lotr.mp4" type="video/mp4"/>
+			<source src="videos/lotr.webm" type="video/webbm"/>
+			<source src="videos/lotr.ogg" type="video/ogg"/>
 		</video>
 	</section>
 	<footer>
