--- a/samples/html/image.html
+++ b/samples/html/image.html
@@ -12,7 +12,7 @@
 	<section>
 		<img id="logo1" alt="HTML5" src="img/html5.png" />
 		<!-- Origin could be anonymous or use credentials -->
-		<img id="logo2" alt="Ruby logo image" title="Ruby logo image" src="img/ruby.png" crossorigin="anonymous"/>
+		<img id="logo2" alt="Web logos image" title="Web logos" src="img/weblogos.png" crossorigin="anonymous"/>
 	</section>
 	<footer>
 		<a href="index.html" title="Go back to index">Index</a>
