Adapted HTML examples

--- a/samples/html/a.html
+++ b/samples/html/a.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta key="author" content="Pello Xabier Altadill Izura">
-	<title>HTML5 samples: anchor</title>
+	<title>HTML samples: anchor</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: anchor</h2>
+		<h2>HTML samples: anchor</h2>
 	</header>
 	<section>
 		<p>This is a <a href="http://www.youtube.com">YouTube</a>.</p>
