--- a/samples/html/audio.html
+++ b/samples/html/audio.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta key="author" content="Pello Xabier Altadill Izura">
-	<title>HTML5 samples: audio</title>
+	<title>HTML samples: audio</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: audio</h2>
+		<h2>HTML samples: audio</h2>
 	</header>
 	<section>
 		<audio id="audio-1" controls="controls">
