--- a/samples/html/button.html
+++ b/samples/html/button.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: button</title>
+<title>HTML samples: button</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: button</h2>
+		<h2>HTML samples: button</h2>
 	</header>
 	<section>
 		<input type="button" value="Generic Button" autofocus="autofocus" id="btn"/>
