--- a/samples/html/canvas.html
+++ b/samples/html/canvas.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: canvas</title>
+<title>HTML samples: canvas</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: canvas</h2>
+		<h2>HTML samples: canvas</h2>
 	</header>
 	<section>
 		<canvas id="canvas-1" width="300" height="200"></canvas>
