--- a/samples/html/datalist.html
+++ b/samples/html/datalist.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: datalist</title>
+<title>HTML samples: datalist</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: datalist</h2>
+		<h2>HTML samples: datalist</h2>
 	</header>
 	<section>
 		<input list="companyList" id="companies"/>
