--- a/samples/html/form.html
+++ b/samples/html/form.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: form</title>
+<title>HTML samples: form</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: form</h2>
+		<h2>HTML samples: form</h2>
 	</header>
 	<section>
 		<form name="sampleform" id="form-1" action="form.html" method="post">
