--- a/samples/html/forms/color.html
+++ b/samples/html/forms/color.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: color type</title>
+<title>HTML form samples: color chooser form type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: color type</h2>
+		<h2>HTML form samples: color chooser form type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="color1">Choose color</label><br />
+			<label for="color1">Color chooser</label><br />
 			<input id="color1" name="color1" placeholder="Choose color" type="color"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="color2">Mandatory color</label><br />
-			<input id="color2" name="color2" placeholder="Mandatory color" required="true" type="color"/>
+			<label for="color2">Second color chooser</label><br />
+			<input id="color2" name="color2" placeholder="Secondary color" required="true" type="color"/>
 		</div>
 		<input type="submit">
 		</form>
