--- a/samples/html/forms/date.html
+++ b/samples/html/forms/date.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: date type</title>
+<title>HTML form samples: date form type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: date type</h2>
+		<h2>HTML form samples: date form type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="date1">Enter date</label><br />
-			<input id="date1" name="date1" placeholder="Enter date" type="date"/>
+			<label for="date1">Enter/Select a date</label><br />
+			<input id="date1" name="date1" placeholder="Enter/select date" type="date"/>
 		</div>
 		<div style="margin:1em;">
 		</div>
