--- a/samples/html/forms/datetime.html
+++ b/samples/html/forms/datetime.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: datetime type</title>
+<title>HTML form samples: datetime field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: datetime type</h2>
+		<h2>HTML form samples: datetime field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="datetime1">Enter datetime</label><br />
+			<label for="datetime1">Enter/select a datetime</label><br />
 			<input id="datetime1" name="datetime1" placeholder="Enter datetime" type="datetime"/>
 		</div>
 		<div style="margin:1em;">
