--- a/samples/html/forms/email.html
+++ b/samples/html/forms/email.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: email type</title>
+<title>HTML form samples: email field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: email type</h2>
+		<h2>HTML form samples: email field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="email1">Email</label><br />
-			<input id="email1" name="email1" placeholder="Enter email" type="email"/>
+			<label for="email1">Enter personal email</label><br />
+			<input id="email1" name="email1" placeholder="Enter personal email" type="email"/>
 		</div>
 		<div style="margin:1em;">
 			<label for="email2">Enter company email</label><br />
-			<input id="email2" name="email2" placeholder="@cuatrovientos.org" pattern="[a-z0-9\.\-\_]+\@cuatrovientos\.org$" required="true" type="email"/>
+			<input id="email2" name="email2" placeholder="@evil.corp" pattern="[a-z0-9\.\-\_]+\@evil\.corp$" required="true" type="email"/>
 		</div>
 		<input type="submit">
 		</form>
