--- a/samples/html/forms/file.html
+++ b/samples/html/forms/file.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: file type</title>
+<title>HTML form samples: file field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: file type</h2>
+		<h2>HTML form samples: file field type</h2>
 	</header>
 	<section>
 		<form enctype="application/x-www-form-urlencoded">
