--- a/samples/html/forms/index.html
+++ b/samples/html/forms/index.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples</title>
+<title>HTML form field samples</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples</h2>
+		<h2>HTML form field samples</h2>
 	</header>
 	<section>
-	<h2>List of samples</h2>	
+	<h3>List of form field samples</h3>
 	<ul>
 		<li><a href="text.html" title="Example of text">text</a></li>
-		<li><a href="textarea.html" title="Example of textare">textarea</a></li>
+		<li><a href="textarea.html" title="Example of textarea">textarea</a></li>
 		<li><a href="search" title="Example of search">search</a></li>
 		<li><a href="password.html" title="Example of password">password</a></li>
 		<li><a href="number.html" title="Example of number">number</a></li>
