--- a/samples/html/forms/month.html
+++ b/samples/html/forms/month.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: month type</title>
+<title>HTML form samples: month field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: month type</h2>
+		<h2>HTML form samples: month field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="month1">Choose month</label><br />
-			<input id="month1" name="month1" placeholder="Choose month" type="month"/>
+			<label for="month1">Choose a month</label><br />
+			<input id="month1" name="month1" placeholder="Choose a month" type="month"/>
 			</div>
 		<div style="margin:1em;">
 		</div>
