--- a/samples/html/forms/number.html
+++ b/samples/html/forms/number.html
@@ -3,29 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: number type</title>
+<title>HTML form samples: number field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: number type</h2>
+		<h2>HTML form samples: number field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
 			<label for="numer1">Any number</label><br />
-			<input id="numer1" name="number1" placeholder="Enter a number" type="number"/>
+			<input id="numer1" name="number1" placeholder="Enter any number" type="number"/>
 		</div>
 		<div style="margin:1em;">
 			<label for="number2">Age</label><br />
 			<input id="number2" name="number2" placeholder="Enter your age" min="0" max="150" required="true" type="number"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="number3">Zip code</label><br />
-			<input id="number3" name="number3" placeholder="Enter zip code" min="10000" max="99999" pattern="[0-9]{5}" required="true" type="number"/>
+			<label for="number3">Even numbers</label><br />
+			<input id="number3" name="number3" placeholder="Even numbers: 2, 4, 6" min="2" max="100" step="2" required="true" type="number"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="number4">Even numbers</label><br />
-			<input id="number4" name="number4" placeholder="Even numbers: 2, 4, 6" min="2" max="100" step="2" required="true" type="number"/>
+			<label for="number4">Zip code</label><br />
+			<input id="number4" name="number4" placeholder="Enter your zip code" min="10000" max="99999" pattern="[0-9]{5}" required="true" type="number"/>
 		</div>
 		<input type="submit">
 		</form>
