--- a/samples/html/forms/password.html
+++ b/samples/html/forms/password.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: password type</title>
+<title>HTML form samples: password field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: password type</h2>
+		<h2>HTML form samples: password field type</h2>
 	</header>
 	<section>
 		<form>
@@ -17,10 +17,10 @@
 		</div>
 		<div style="margin:1em;">
 			<label for="password2">Reenter password</label><br />
-			<input id="password2" name="password2" placeholder="Enter password" maxlength="15" required="true" type="password"/>
+			<input id="password2" name="password2" placeholder="Reenter password" maxlength="15" required="true" type="password"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="password3">Password min</label><br />
+			<label for="password3">Password with min length of 4</label><br />
 			<input id="password3" name="password3" placeholder="Enter minumum password" pattern="[\w\W]{4,}" required="true" type="password"/>
 		</div>
 		<input type="submit">
