--- a/samples/html/forms/range.html
+++ b/samples/html/forms/range.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: range type</title>
+<title>HTML form samples: range field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: range type</h2>
+		<h2>HTML form samples: range field type</h2>
 	</header>
 	<section>
 		<form>
-<label for="rateFilm">Rate this film</label><br />
-<input id="rateFilm" name="rate " type="range" min="1" max="10" value="5" >
+<label for="rateRestaurant">Rate this restaurant between 1 and 10</label><br />
+<input id="rateRestaurant" name="rate " type="range" min="1" max="10" value="5" >
 <br />
 <input type="submit">
 
