--- a/samples/html/forms/search.html
+++ b/samples/html/forms/search.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: search type</title>
+<title>HTML form samples: search field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: search type</h2>
+		<h2>HTML form samples: search field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="search1">Search</label><br />
-			<input id="search1" name="search" placeholder="Enter your search term" type="search"/>
+			<label for="search1">Search something</label><br />
+			<input id="search1" name="search" placeholder="Enter search term" type="search"/>
 		</div>
 		<div style="margin:1em;">
 			<label for="search2">Required search</label><br />
-			<input id="search2" name="search2" placeholder="Required search" pattern="[a-zA-Z]{1,10}" maxlength="10" autofocus="true" required="true" type="search"/>
+			<input id="search2" name="search2" placeholder="Required search with pattern" pattern="[a-zA-Z]{1,10}" maxlength="10" autofocus="true" required="true" type="search"/>
 		</div>
 		<input type="submit">
 		</form>
