--- a/samples/html/forms/tel.html
+++ b/samples/html/forms/tel.html
@@ -3,20 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: tel type</title>
+<title>HTML form samples: tel field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: tel type</h2>
+		<h2>HTML form samples: tel field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="tel1">Telephone</label><br />
-			<input id="tel1" name="tel1" placeholder="Enter telephone" type="tel"/>
+			<label for="tel1">Telephone number</label><br />
+			<input id="tel1" name="tel1" placeholder="Enter phone number" type="tel"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="telephone2">Local telephone</label><br />
+			<label for="telephone2">Local telephone number</label><br />
 			<input id="telephone2" name="telephone2" placeholder="Enter local phone 948..." pattern="^948[0-9]{6}" maxlength="9" required="true" type="tel"/>
 		</div>
 		<input type="submit">
