--- a/samples/html/forms/text.html
+++ b/samples/html/forms/text.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: text type</title>
+	<meta charset="UTF-8">
+	<meta key="author" content="Pello Xabier Altadill Izura">
+	<title>HTML form samples: text field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: text type</h2>
+		<h2>HTML form samples: text field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="text1">Text type</label><br /> 
-			<input id="text1" name="Text" placeholder="Text" type="text" />
+			<label for="text1">Simple text type</label><br />
+			<input id="text1" name="text" placeholder="Text" type="text" />
 		</div>
 		<div style="margin:1em;">
-			<label for="input-1">Input DNI</label><br />
-			<input id="input-1" name="dniInput" placeholder="Insert DNI" pattern="[0-9]{8}[A-Z]{1}" maxlength="9" autofocus="true" required="true" type="text"/>
+			<label for="idCard">Input National ID</label><br />
+			<input id="idCard" name="dniInput" placeholder="Insert DNI" pattern="[0-9]{8}[A-Z]{1}" maxlength="9" autofocus="true" required="true" type="text"/>
 		</div>
 		<input type="submit">
 		</form>
