--- a/samples/html/forms/textarea.html
+++ b/samples/html/forms/textarea.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: textarea type</title>
+	<meta charset="UTF-8">
+	<meta key="author" content="Pello Xabier Altadill Izura">
+	<title>HTML form samples: textarea field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: textarea type</h2>
+		<h2>HTML form samples: textarea field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
 			<div><label for="textarea1">Description</label></div>
-			<textarea id="textarea1" name="Description" placeholder="Insert your description" cols="40" rows="8"></textarea>
+			<textarea id="textarea1" name="myDescription" placeholder="Insert your multiline text" cols="40" rows="8"></textarea>
 		</div>
 		<div style="margin:1em;">
 			<div><label for="textarea2">Description with options</label></div>
-			<textarea id="textarea2" name="Description" disabled="disabled" placeholder="Enter your description, 255 chars" maxlength="255" autofocus="true" required="true" cols="40" rows="8"></textarea>
+			<textarea id="textarea2" name="shortDescription" disabled="disabled" placeholder="Enter your text, up to 255 chars" maxlength="255" autofocus="true" required="true" cols="40" rows="8"></textarea>
 		</div>
 		<input type="submit">
 		</form>
