--- a/samples/html/forms/time.html
+++ b/samples/html/forms/time.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: time type</title>
+	<meta charset="UTF-8">
+	<meta key="author" content="Pello Xabier Altadill Izura">
+	<title>HTML form samples: time field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: time type</h2>
+		<h2>HTML form samples: time field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="time1">Enter time</label><br />
-			<input id="time1" name="time1" placeholder="Enter time" type="time"/>
-		</div>
-		<div style="margin:1em;">
+			<label for="time1">Enter/select time</label><br />
+			<input id="time1" name="time1" placeholder="Enter/select time" type="time"/>
 		</div>
 		<input type="submit">
 		</form>
