--- a/samples/html/forms/url.html
+++ b/samples/html/forms/url.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: url type</title>
+<title>HTML form samples: url field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: url type</h2>
+		<h2>HTML form samples: url field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="url1">Your site (any://)</label><br />
-			<input id="url1" name="url1" placeholder="Enter valid url" type="url"/>
+			<label for="url1">Enter site (any://)</label><br />
+			<input id="url1" name="url1" placeholder="Enter any valid url" type="url"/>
 		</div>
 		<div style="margin:1em;">
-			<label for="url2">Your site (http://)</label><br />
-			<input id="url2" name="url2" placeholder="Enter valid url" pattern="^http\:\/\/[\w\W]+" type="url"/>
+			<label for="url2">Enter site (http://)</label><br />
+			<input id="url2" name="url2" placeholder="Enter valid http url" pattern="^http\:\/\/[\w\W]+" type="url"/>
 		</div>
 		<input type="submit">
 		</form>
