--- a/samples/html/forms/week.html
+++ b/samples/html/forms/week.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: week type</title>
+<title>HTML form samples: week field type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: week type</h2>
+		<h2>HTML form samples: week field type</h2>
 	</header>
 	<section>
 		<form>
 		<div style="margin:1em;">
-			<label for="week1">Enter week</label><br />
-			<input id="week1" name="week1" placeholder="Choose week" type="week"/>
+			<label for="week1">Enter/select week</label><br />
+			<input id="week1" name="week1" placeholder="Choose/select week" type="week"/>
 		</div>
 		<div style="margin:1em;">
 		</div>
