--- a/samples/html/image.html
+++ b/samples/html/image.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: image</title>
+<title>HTML samples: image</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: image</h2>
+		<h2>HTML samples: image</h2>
 	</header>
 	<section>
-		<img id="logo1" alt="HTML5" src="img/html5.png" />
+		<img id="logo1" alt="HTML 5" src="img/html5.png" />
 		<!-- Origin could be anonymous or use credentials -->
 		<img id="logo2" alt="Web logos image" title="Web logos" src="img/weblogos.png" crossorigin="anonymous"/>
 	</section>
