--- a/samples/html/index.html
+++ b/samples/html/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples</title>
+<title>HTML samples</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples</h2>
+		<h2>HTML samples</h2>
 	</header>
 	<section>
 	<h2>List of samples</h2>	
