--- a/samples/html/input.html
+++ b/samples/html/input.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: input</title>
+<title>HTML samples: input</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: input</h2>
+		<h2>HTML samples: input</h2>
 	</header>
 	<section>
 		<label for="login">Login</label>
