--- a/samples/html/menu.html
+++ b/samples/html/menu.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: menu</title>
+<title>HTML samples: menu</title>
 </head>
 <body contextmenu="myMenu">
 	<header>
-		<h2>HTML5 samples: context menu</h2>
+		<h2>HTML samples: context menu</h2>
 	</header>
 	<section>
 		<menu id="myMenu" label="My menu" type="context">
