--- a/samples/html/paragraph.html
+++ b/samples/html/paragraph.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: preformated text</title>
+<title>HTML samples: preformated text</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: preformated text</h2>
+		<h2>HTML samples: preformated text</h2>
 	</header>
 	<section>
 		<p>Do not go gentle</p>
