--- a/samples/html/pre.html
+++ b/samples/html/pre.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: paragraph</title>
+<title>HTML samples: paragraph</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: paragraph</h2>
+		<h2>HTML samples: paragraph</h2>
 	</header>
 	<section>
 		<p>This is just a paragraph, contains a text.</p>
-		<p>Each HTML paragraph adds a newline with the next element and also some padding.</p>
+		<p>Each HTML  paragraph adds a newline with the next element and also some padding.</p>
 		<p>This is the last paragraph.</p>
 	</section>
 	<footer>
