--- a/samples/html/table.html
+++ b/samples/html/table.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: table</title>
+<title>HTML samples: table</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: table</h2>
+		<h2>HTML samples: table</h2>
 	</header>
 	<section>
 		<table id="sample">
@@ -22,7 +22,7 @@
 			<tbody>
 				<tr>
 					<td>1</td>
-					<td>HTML</td>
+					<td>HTML </td>
 					<td>HyperText Markup Language</td>
 				</tr>
 				<tr>
