--- a/samples/html/text.html
+++ b/samples/html/text.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 form samples: text type</title>
+<title>HTML form samples: text type</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 form samples: text type</h2>
+		<h2>HTML form samples: text type</h2>
 	</header>
 	<section>
 		<div>
