--- a/samples/html/video.html
+++ b/samples/html/video.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: video</title>
+<title>HTML samples: video</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: video</h2>
+		<h2>HTML samples: video</h2>
 	</header>
 	<section>
 		<video id="sampleVideo" width="300" height="200" autoplay="autoplay"
