--- a/samples/html/list.html
+++ b/samples/html/list.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: list</title>
+<title>HTML samples: list</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: list</h2>
+		<h2>HTML samples: list</h2>
 	</header>
 	<section>
 		<h3>Unordered list: Systems</h3>
@@ -18,7 +18,7 @@
 		</ul>
 		<h3>Ordered list: book contents</h3>
 		<ol>
-			<li>HTML</li>
+			<li>HTML </li>
 			<li>CSS</li>
 			<li>JS</li>
 		</ol>
