--- a/samples/html/meter.html
+++ b/samples/html/meter.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta key="author" content="Pello Xabier Altadill Izura">
-<title>HTML5 samples: meter</title>
+<title>HTML samples: meter</title>
 </head>
 <body>
 	<header>
-		<h2>HTML5 samples: meter</h2>
+		<h2>HTML samples: meter</h2>
 	</header>
 	<section>
 		<meter value="50" min="0" max="100" low="1" high="99" optimum="50" id="myMeter">
