--- a/samples/css/animations.html
+++ b/samples/css/animations.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>CSS: animations</h1>
+        <h2>CSS: animations</h2>
     </header>
     <main>
 <article>
-    <h3>animations</h3>
+    <h3>Animations</h3>
     <p class="flashy">
         This is just a paragraph to see the animation in action
     </p>
