--- a/samples/css/gradients.html
+++ b/samples/css/gradients.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <header>
-<h2>CSS: gradients</h2>
+<h2>CSS: gradients samples</h2>
 </header>
 <main>
    <article>
-   <h3>Color gradients</h3>
-   <div class="linear-gray">
-    This is just a simple div element with a linear gradient
+   <h3>Sample gradients</h3>
+   <div class="linear">
+     Linear gradient sample
    </div>
    <div class="radial">
-    This is just a simple div element with a linear gradient
+     Radial gradient sample
    </div>
    </article>
 </main>
