Attributes child selectors

--- a/samples/css/childselector.html
+++ b/samples/css/childselector.html
@@ -17,31 +17,28 @@
                <table>
                    <thead>
                        <tr>
-                           <th>Position</th>
-                           <th>Team</th>
-                           <th>Points</th>
+                           <th>Number</th>
+                           <th>Name</th>
+                           <th>Type</th>
                        </tr>
                    </thead>
                    <tbody>
                        <tr>
-                           <td>1</td><td>Oviedo</td><td>43</td>
+                           <td>0</td><td>Rust</td><td>Language</td>
                        </tr>
                          <tr>
-                           <td>2</td><td>Osasuna</td><td>42</td>
+                           <td>1</td><td>Unix</td><td>System</td>
                        </tr>
                         <tr>
-                           <td>3</td><td>Cádiz</td><td>40</td>
+                           <td>2</td><td>JavaScript</td><td>Language</td>
                        </tr>
                          <tr>
-                           <td>4</td><td>FC Barcelona</td><td>1</td>
-                       </tr>
-                          <tr>
-                           <td>5</td><td>R. Madrid</td><td>1</td>
+                           <td>3</td><td>Android</td><td>Device</td>
                        </tr>
                    </tbody>
                    <tfoot>
                        <tr colspan="3">
-                           <th>5 teams</th>
+                           <th>Total: 4</th>
                        </tr>
                    </tfoot>
                <table>
