--- a/samples/css/hslcolor.html
+++ b/samples/css/hslcolor.html
@@ -12,8 +12,8 @@
     </header>
     <main>
            <section class="manifesto">
-               <h3 class="title">The Craftmanship Manifesto</h3>
-               <p >
+               <h3 class="title">The Craftsmanship Manifesto</h3>
+               <p>
                  Raising the bar.
                  As aspiring Software Craftsmen we are raising the bar of professional software development by practicing it and helping others learn the craft. Through this work we have come to value:
 
