--- a/samples/css/notselector.html
+++ b/samples/css/notselector.html
@@ -12,14 +12,13 @@
         <h2>CSS: not pseudoclass</h2>
         <nav>
             <ul>
-                <li class="active"><a href="">Home</a></li>
-                <li><a href="">Offers</a></li>
-                <li><a href="">Catalog</a></li>
-                <li><a href="">Location</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="">Angular</a></li>
+                <li><a href="">React</a></li>
+                <li class="current"><a href="">jQuery</a></li>
+                <li><a href="">Vue</a></li>
+                <li><a href="">Ember</a></li>
             </ul>
         </nav>
     </header>
-
 </body>
 </html>
