--- a/samples/css/shadows.html
+++ b/samples/css/shadows.html
@@ -12,19 +12,18 @@
 </header>
 <main>
    <article>
-   <h3 class="title">Shadows</h3>
+   <h3 class="title">CSS Shadows</h3>
    <p>
-    This is a <a href="http://www.google.es" title="Go to google">link to Google</a>
-    This is just a random text that we put to show the use the shadow
+     Link to <a href="http://www.w3.org" title="Go to w3c">link to W3c</a>
    </p>
-   <div class="shady">
-    This is div block with shadow
+   <div class="shadow1">
+      Applied shadow1
     </div>
-    <div class="shady2">
-    This is div block with shadow2
+    <div class="shadow2">
+      Applied shadow2
     </div>
-    <div class="shady3">
-    This is div block with shadow3
+    <div class="shadow3">
+      Applied shadow3
     </div>
    </article>
 </main>
