--- a/samples/css/evenselector.html
+++ b/samples/css/evenselector.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <h2>CSS: nth-child pseudoclass</h2>
+        <h2>CSS: using nth-child pseudoclass</h2>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Offers</li>
-                <li>Catalog</li>
-                <li>Location</li>
-                <li>About</li>
+                <li>Rust</li>
+                <li>JavaScript</li>
+                <li>Haskell</li>
+                <li>Python</li>
+                <li>Scheme</li>
+                <li>Elixir</li>
+                <li>Ruby</li>
             </ul>
         </nav>
     </header>
