--- a/samples/css/transformations.html
+++ b/samples/css/transformations.html
@@ -12,19 +12,19 @@
     </header>
     <main>
            <article>
-               <h3>transformations</h3>
-               <h4>Scale</h4>
-               <div class="scale">1. Div with scale transformation</div>
-               <h4>Translate</h4>
-               <div class="translate">2. Div with translate transformation</div>
+               <h3>CSS transformations</h3>
                <h4>Rotate</h4>
-               <div class="rotate">3. Div with rotate transformation</div>
+               <div class="rotate">CSS Rotate transformation</div>
+               <h4>Scale</h4>
+               <div class="scale">CSS Scale transformation</div>
                <h4>Skew</h4>
-               <div class="skew">4. Div with skew transformation</div>
+               <div class="skew">CSS Skew transformation</div>
+               <h4>Translate</h4>
+               <div class="translate">CSS Translate transformation</div>
                <h4>Matrix</h4>
-               <div class="matrix">5. Div with matrix transformation</div>
-                <h4>Transform-Origin</h4>
-               <div class="transform-origin">6. Div with transform origin & rotation transformation</div>
+               <div class="matrix">CSS Matrix transformation</div>
+               <h4>Transform-Origin</h4>
+               <div class="transform-origin">CSS origin & rotation transformation</div>
                <div style="border:0;marin:20px"></div>
            </article>
     </main>
