--- a/samples/css/transitions.html
+++ b/samples/css/transitions.html
@@ -13,19 +13,18 @@
     <main>
            <article>
                <h3>CSS transitions</h3>
-               <p>
-                   Go back <a href="home" class="grow">home</a>
-               </p>
                <p class="transp">
-                   This is a transition with different timings
+                   CSS transition with different timings
                </p>
-               <div class="ease">1. Div with ease transition</div>
-               <div class="linear">2. Div with linear transition</div>
-               <div class="ease-in">3. Div with ease-in transition</div>
-               <div class="ease-out">4. Div with ease-out transition</div>
-               <div class="ease-in-out">5. Div with ease-in-out transition</div>
-               <div class="cubic-bezier">6. Div with cubic-bezier transition</div>
-
+               <div class="linear">CSS linear transition</div>
+               <div class="ease">CSS ease transition</div>
+               <div class="ease-in">CSS ease-in transition</div>
+               <div class="ease-out">CSS ease-out transition</div>
+               <div class="ease-in-out">CSS ease-in-out transition</div>
+               <div class="cubic-bezier">CSS cubic-bezier transition</div>
+               <p>
+                   Go to <a href="index" class="grow">index</a>
+               </p>
            </article>
     </main>
 </body>
