--- a/samples/css/forms.html
+++ b/samples/css/forms.html
@@ -11,32 +11,31 @@
         <h2>CSS: forms</h2>
     </header>
     <main>
-
 <section>
  <article>
    <h3>Forms</h3>
-<form>
- <fieldset>
-   <legend>Sign up</legend>
-    <div>
-        <label for="email">Email</label>
-        <input id="email" name="email" autofocus="true" placeholder="Put your email" minlength="4" type="email" />
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input id="password" name="password" placeholder="Insert password" pattern="[0-9A-Za-z]{8,}" minlength="8"  required="true" type="password"/>
-    </div>
-    <div>
-        <label for="description">Description</label>
-        <textarea id="description" name="description" placeholder="Insert Description" pattern="[a-zA-Z0-9]{4,255}" ></textarea>
-    </div>
-    <div>
-        <input type="submit" class="submit">
-    </div>
-   </fieldset>
- </form>
-	</section>
-           </article>
-    </main>
+        <form>
+         <fieldset>
+           <legend>Sign up</legend>
+            <div>
+                <label for="login">Login</label>
+                <input id="login" name="login" autofocus="true" placeholder="Your login" minlength="8" />
+            </div>
+            <div>
+                <label for="password">Password</label>
+                <input id="password" name="password" placeholder="Your password" required="true" type="password" minlength="8" />
+            </div>
+            <div>
+                <label for="note">Note</label>
+                <textarea id="note" name="note" placeholder="Note here..." pattern="[a-zA-Z0-9]{4,255}" ></textarea>
+            </div>
+            <div>
+                <input type="submit" class="submit" value="Send">
+            </div>
+           </fieldset>
+         </form>
+      </article>
+  	</section>
+</main>
 </body>
 </html>
