Added vendor prefixes thing

--- a/samples/css/vendorprefixes.html
+++ b/samples/css/vendorprefixes.html
@@ -13,12 +13,12 @@
     <main>
            <section>
                <h3>CSS prefixes</h3>
-               <div class="red round">
-                   This div has rounded corners applied with different vendor prefixes
+               <div class="red rounded">
+                   Rounded with vendor prefixes
                </div>
-                 <div class="blue round">
-                     This is the second div
-                </div>
+               <div class="blue rounded">
+                  Another rounded div
+              </div>
            </section>
     </main>
 </body>
