--- a/samples/css/webfonts.html
+++ b/samples/css/webfonts.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-  	<meta charset="UTF-8">
-    <meta key="author" content="Pello Xabier Altadill Izura">\n<meta key="author" content="Pello Xabier Altadill Izura">
+  <meta charset="UTF-8">
+  <meta key="author" content="Pello Xabier Altadill Izura">
   <title>CSS Samples: Web Fonts</title>
   <link rel="stylesheet" href="css/webfonts.css" type="text/css">
 </head>
@@ -11,15 +11,15 @@
         <h2>CSS: web fonts sample</h2>
     </header>
     <main>
-<section>
-    <h3>CSS web fonts</h3>
-    <div class="roman">
-        This div uses a simple Times font
-    </div>
-      <div class="beauty">
-          This div uses a fancy font, looks great!
-     </div>
-</section>
+    <section>
+        <h3>CSS and web fonts</h3>
+          <div class="fancy">
+              This uses webfont
+         </div>
+         <div class="helvetica">
+             This uses a simple helvetica with defaults
+         </div>
+    </section>
     </main>
 </body>
 </html>
